--- a/Honors Alg 2/10\26\23.md
+++ b/Honors Alg 2/10\26\23.md
@@ -112,7 +112,7 @@ x < -2 or x > 4
 
 This means that x can be any real number less than -2 or greater than 4 for the inequality (1/2)x^2 - x > 4 to be satisfied.
 
-## (num ± num(i)) ± (num ± num(i))
+# (num ± num(i)) ± (num ± num(i))
 To solve the expression (3 - 6i) - (7 + 2i), you are performing complex number subtraction. Follow these steps:
 
 Subtract the real parts (the parts without the "i") and the imaginary parts separately:
@@ -125,3 +125,224 @@ Combine the results from step 1 to form the complex number:
 -4 - 8i
 
 So, (3 - 6i) - (7 + 2i) equals -4 - 8i.
+
+# (num ± num(i) (num ± num(i)
+To multiply the complex numbers (5 + 6i) and (-4 + 7i), you can use the distributive property. Here are the steps:
+
+Multiply the real parts together (5 and -4):
+
+Real part: (5) * (-4) = -20
+
+Multiply the real part of the first complex number by the imaginary part of the second complex number (5 and 7i):
+
+-20 + 35i
+
+Multiply the imaginary part of the first complex number by the real part of the second complex number (6i and -4):
+
+-24i
+
+Multiply the imaginary parts together (6i and 7i):
+
+Imaginary part: (6i) * (7i) = 42i^2
+
+Combine the results from steps 2, 3, and 4:
+
+-20 + 35i - 24i + 42i^2
+
+Since i^2 is equal to -1, replace i^2 with -1:
+
+-20 + 35i - 24i - 42
+
+Combine like terms:
+
+-62 + 11i
+
+So, the product of (5 + 6i) and (-4 + 7i) is -62 + 11i.
+
+# Num(x)^2 + num = 0
+
+To solve the quadratic equation 7x^2 + 21 = 0, you can follow these steps:
+
+Subtract 21 from both sides of the equation to isolate the quadratic term:
+
+7x^2 = -21
+
+Divide both sides by 7 to solve for x^2:
+
+x^2 = -21 / 7
+
+Simplify the right side:
+
+x^2 = -3
+
+Take the square root of both sides to solve for x:
+
+x = ±√(-3)
+
+However, the square root of a negative number is not a real number, so in this case, there are no real solutions. The solutions are complex and can be expressed as:
+
+x = ±√3 * i
+
+Where 'i' is the imaginary unit.
+
+# Finding Zeros
+
+here are the steps to find the zeros of f(x) = 2x^2 + 32:
+
+Start with the equation: 2x^2 + 32 = 0.
+
+Subtract 32 from both sides: 2x^2 = -32.
+
+Divide both sides by 2: x^2 = -16.
+
+Take the square root of both sides: x = ±√(-16).
+
+Since the square root of -16 is not a real number, it involves the imaginary unit i: x = ±4i.
+
+So, the zeros of the function are x = ±4i.
+
+# Completing Square 
+
+
+To solve the quadratic equation x^2 + 16x + 17 = 0 by completing the square, follow these steps:
+
+Start with the equation: x^2 + 16x + 17 = 0.
+
+Move the constant term to the other side of the equation (subtract 17 from both sides): x^2 + 16x = -17.
+
+To complete the square, we want the coefficient of x^2 to be 1, so divide the entire equation by 1: (1)x^2 + 16x = -17.
+
+Now, to complete the square, add and subtract (1/2)^2 to the x terms. This is done because (1/2)^2 = 1/4, and we're adding and subtracting to keep the equation balanced:
+
+(1)x^2 + 16x + (1/4) = -17 + (1/4).
+
+Simplify the equation: x^2 + 16x + 1/4 = -17/4 + 1/4.
+
+Further simplify the right side by finding a common denominator: x^2 + 16x + 1/4 = -16/4.
+
+Combine the constants on the right side: x^2 + 16x + 1/4 = -4.
+
+Write the left side as a perfect square: (x + 8)^2 = -4.
+
+Multiply both sides by 4 to isolate (x + 8)^2 on the left side: 4(x + 8)^2 = -4.
+
+Take the square root of both sides, noting both the positive and negative square roots: x + 8 = ±√(-4).
+
+Simplify the right side: x + 8 = ±(2i).
+
+Continue simplifying: x + 8 = 2i or x + 8 = -2i.
+
+Isolate x in both equations: x = 2i - 8 and x = -2i - 8.
+
+Further simplify: x = -8 + 2i and x = -8 - 2i.
+
+# Quadratic Formula 
+To solve the quadratic equation -x^2 + 5x = 2 using the quadratic formula, you can follow these steps:
+
+Write the equation in standard form (ax^2 + bx + c = 0):
+
+-x^2 + 5x - 2 = 0
+
+Identify the coefficients:
+
+a = -1
+b = 5
+c = -2
+
+Apply the quadratic formula:
+
+The quadratic formula is given by:
+
+x = (-b ± √(b² - 4ac)) / (2a)
+
+Plug in the values of a, b, and c:
+
+x = (-(5) ± √((5)² - 4(-1)(-2))) / (2(-1))
+
+Simplify:
+
+x = (-5 ± √(25 - 8)) / (-2)
+
+x = (-5 ± √17) / (-2)
+
+So, the solutions to the equation -x^2 + 5x = 2 are:
+
+x = (-5 + √17) / 2
+
+x = (-5 - √17) / 2
+
+# Finding Discriminant and Type Of Solution 
+
+To find the discriminant of the quadratic equation -x^2 - 6x - 9 = 0 and determine the number and type of solutions, you can use the discriminant formula and then consider any other possible cases. The discriminant formula is given as:
+
+Discriminant (D) = b^2 - 4ac
+
+Where a, b, and c are the coefficients of the quadratic equation ax^2 + bx + c = 0.
+
+In the case of -x^2 - 6x - 9 = 0:
+
+a = -1
+b = -6
+c = -9
+
+Calculate the discriminant:
+D = (-6)^2 - 4(-1)(-9) = 36 - 36 = 0
+
+The discriminant is equal to 0.
+
+Now, let's consider the possible types of solutions based on the discriminant value:
+
+If the discriminant is greater than 0 (D > 0), there are two distinct real solutions.
+
+If the discriminant is equal to 0 (D = 0), there is one real solution (a repeated root).
+
+If the discriminant is less than 0 (D < 0), there are two complex (non-real) solutions.
+
+In the case of -x^2 - 6x - 9 = 0, the discriminant is 0, so there is one real solution, but it's a repeated root.
+
+The solutions are:
+
+x = -3
+
+# Nonlinear systems by substituion
+> [!Important] 
+> can use elmination and graphing too but those are easy
+To solve the nonlinear system of equations using substitution:
+
+Start with the two equations:
+2x^2 - 2 = y
+-2x + 2 = y
+
+Express one of the equations in terms of the other variable. In this case, it's convenient to express the second equation in terms of y:
+-2x + 2 = y
+
+Now, substitute the expression for y from the second equation into the first equation:
+2x^2 - 2 = (-2x + 2)
+
+Solve for x:
+2x^2 + 2x - 2 - 2 = 0
+2x^2 + 2x - 4 = 0
+
+Divide the equation by 2 to simplify it:
+x^2 + x - 2 = 0
+
+Factor the quadratic equation:
+(x + 2)(x - 1) = 0
+
+Set each factor equal to zero and solve for x:
+x + 2 = 0 --> x = -2
+x - 1 = 0 --> x = 1
+
+So, the solutions for x are x = -2 and x = 1. To find the corresponding values of y, substitute these values of x back into either of the original equations. For example, using the first equation:
+
+For x = -2:
+2(-2)^2 - 2 = y
+8 - 2 = y
+y = 6
+
+For x = 1:
+2(1)^2 - 2 = y
+2 - 2 = y
+y = 0
+
+The solutions to the system of equations are x = -2, y = 6, and x = 1, y = 0.
