--- a/Trig/10\27\23.md
+++ b/Trig/10\27\23.md
@@ -7,7 +7,9 @@
 > * Period Length Formula: PL = 2π/b, where 'b' is the coefficient of x.
 > * Domain: The domain is all real numbers (−∞, ∞).
 > * Range: The range is between -1 and 1, inclusive. [-1, 1]
-> * X-Intercepts: The x-intercepts occur at kπ, where k is an integer. In other words, the x-intercepts are at x = 0, π, 2π, -π, -2π, etc.
+> * X-Intercepts: The x-intercepts occur at everytime the graph passes through X axis, answer with setbuilder notation
+>                                                    
+>  ![download](https://github.com/Ethan-Ryan-Anderson/School-Notes-23-24-SMFHS/assets/118407438/b2423e09-7fcb-4311-b746-3b48c6e677be)
 
 # 2. Cosine Function (y = cos(x)):
 
@@ -18,7 +20,10 @@
 > * Period Length Formula: PL = 2π/b, where 'b' is the coefficient of x.
 > * Domain: The domain is all real numbers (−∞, ∞).
 > * Range: The range is between -1 and 1, inclusive. [-1, 1]
-> * X-Intercepts: The x-intercepts occur at (k + 1/2)π, where k is an integer. In other words, the x-intercepts are at x = π/2, 3π/2, -π/2, -3π/2, etc.
+> * X-Intercepts: The x-intercepts occur at everytime the graph passes through X axis, answer with setbuilder notation
+>
+>   ![images](https://github.com/Ethan-Ryan-Anderson/School-Notes-23-24-SMFHS/assets/118407438/13615981-2497-42f1-80b8-382d031c265d)
+
 
 # 3. Tangent Function (y = tan(x)):
 
@@ -30,6 +35,9 @@
 > * Domain: The domain excludes values where the denominator is zero, so it's (-∞, ∞) with the excluded values at x = (2n + 1)π/2, where n is an integer.
 > * Range: The range is all real numbers, from negative infinity to positive infinity (-∞, ∞).
 > * X-Intercepts: The x-intercepts occur at kπ, where k is an integer. In other words, the x-intercepts are at x = 0, π, -π, 2π, -2π, etc.
+>
+>   ![tancot1](https://github.com/Ethan-Ryan-Anderson/School-Notes-23-24-SMFHS/assets/118407438/ddb432b1-3012-42ba-abb5-a16bf93f5eb9)
+
 
 # 4. Cosecant Function (y = csc(x)):
 
@@ -41,6 +49,9 @@
 > * Domain: The domain is all real numbers except for the x-values that make the sine function equal to zero. So, the domain is x ≠ kπ, where k is an integer.
 > * Range: The range is all real numbers, excluding zero, i.e., y ≠ 0.
 > * X-Intercepts: The x-intercepts occur at kπ, where k is an integer. In other words, the x-intercepts are at x = 0, π, -π, 2π, -2π, etc.
+>
+>   <img width="698" alt="cscx" src="https://github.com/Ethan-Ryan-Anderson/School-Notes-23-24-SMFHS/assets/118407438/f7559a6e-4562-4f5e-95ee-4b17784f556b">
+
 
 # 5. Secant Function (y = sec(x)):
 
@@ -52,6 +63,9 @@
 > * Domain: The domain is all real numbers except for the x-values that make the cosine function equal to zero. So, the domain is x ≠ (k + 1/2)π, where k is an integer.
 > * Range: The range is all real numbers, excluding values between -1 and 1.
 > * X-Intercepts: The x-intercepts occur at (k + 1/2)π, where k is an integer. In other words, the x-intercepts are at x = π/2, -π/2, 3π/2, -3π/2, etc.
+>
+>   <img width="699" alt="secx" src="https://github.com/Ethan-Ryan-Anderson/School-Notes-23-24-SMFHS/assets/118407438/a24ba4ec-696c-4cf0-97cf-09cdbbb88baa">
+
 
 # 6. Cotangent Function (y = cot(x)):
 
@@ -63,3 +77,6 @@
 > * Domain: The domain excludes values where the denominator is zero, so it's (-∞, ∞) with the excluded values at x = nπ, where n is an integer.
 > * Range: The range is all real numbers, excluding zero, i.e., y ≠ 0.
 X-Intercepts: The x-intercepts occur at kπ, where k is an integer. In other words, the x-intercepts are at x = 0, π, -π, 2π, -2π, etc.
+>
+> <img width="699" alt="tan_x" src="https://github.com/Ethan-Ryan-Anderson/School-Notes-23-24-SMFHS/assets/118407438/6f2f5b1e-2d63-4d70-9cb1-e3b31406b5fa">
+
